# Research_Projects

./: .gitmodules
Borzi2019/: Agent.cpp  Agent.h  AgentStructs.h  CMakeLists.txt  Environment.cpp  Environment.h  HelperFunctions.cpp  HelperFunctions.h  Run.sh  configure.sh  main.cpp  run.sh
Borzi2019-Python/: Agent.py  Environment.py  MPC.py  main.py
Drgona2020/: .gitignore  drgona.py
KoZuazua2021/: Agent.cpp  Agent.h  CMakeLists.txt  Environment.cpp  Environment.h  HelperFunctions.cpp  Leader.cpp  Leader.h
Krichene2016/: main.py
Mueller2022/: .gitignore  mueller_code.py
